js/simulator/view/timeline.css
table#timelineTable,
table#timelineTable tbody,
table#timelineTable tr,
table#timelineTable td {
    margin: 0px;
    padding: 0px;
    height: inherit;
    border-collapse: collapse;
}

table#timelineTable {
    width: 100%;
    height: 100%;
    text-align: center;
}

table#timelineTable thead tr.timeline-header th {
    text-align: center;
}

table#timelineTable tr.timeline-step {
    height: 30px;
}

table#timelineTable .timeline-step-label {
    height: inherit;
    width: 10px;
    border-style: solid none;
    margin: 0px;
    padding: 0px;
    font-size: small;
    vertical-align: middle;
    cursor: pointer;
}

table#timelineTable tr:first-of-type td.timeline-step-label,
table#timelineTable tr:last-of-type td.timeline-step-label,
table#timelineTable th.timeline-step-label {
    border-style: none;
}

table#timelineTable tr.timeline-step.selected-step {
    border: 1px dotted black;
    background-image: repeating-linear-gradient(
            45deg,
            transparent,
            transparent 5px,
            rgba(255,255,255,.5) 35px,
            rgba(255,255,255,.5) 70px
    );
}

table#timelineTable tr.timeline-step.selected-step td.timeline-step-label {
    font-weight: bolder;
    color: black;
    background-color: red;
    margin: 5px;
    border-radius: 50%;
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
}


/*table#timelineTable tr.timeline-step.selected-step td.timeline-step-label:before {
    content: '';
    display: block;
    position: absolute;
    width: 0;
    height: 0;
    border-bottom: 10px solid transparent;
    border-top: 10px solid transparent;
    border-left: 10px solid darkcyan;
    border-right: 10px solid transparent;
    opacity: 0.5;
}*/


table#timelineTable tr.timeline-step > td.timeline-cell {
    min-width: 50px;
    border-top: 1px solid;
    border-bottom: 1px solid;
    border-left: 2px solid;
    border-right: 2px solid;
    cursor: copy;
    opacity: 0.2;
}

table#timelineTable tr.timeline-step > td.timeline-cell[contextClass=CC_SCENARIO] {
    background-color: #3287C8;
}
table#timelineTable tr.timeline-step > td.timeline-cell[contextClass=CC_PERSONAL] {
    background-color: #AF46C8;
}
table#timelineTable tr.timeline-step > td.timeline-cell[contextClass=CC_SITUATIONAL] {
    background-color: #91F52D;
}
table#timelineTable tr.timeline-step > td.timeline-cell[contextClass=CC_TECHNICAL] {
    background-color: #969696;
}
table#timelineTable tr.timeline-step > td.timeline-cell[contextClass=CC_PHYSICAL] {
    background-color: #FADC3C;
}
table#timelineTable tr.timeline-step > td.timeline-cell[contextClass=CC_LOCATION] {
    background-color: #F03C32;
}

table#timelineTable tr.timeline-step > td.timeline-cell-marked {
    opacity: 0.5;
}

table#timelineTable tr.timeline-step > td.timeline-cell-occupied {
    width: inherit;
    height: inherit;
    position: relative;
    border-top: none;
    border-bottom: none;
    border-left: 2px solid;
    border-right: 2px solid;
    cursor: move;
    opacity: 1;
}

table#timelineTable tr.timeline-step > td.timeline-cell-occupied.timeline-cell-invisible {
    background-image: repeating-linear-gradient( 45deg, transparent 1%, lightgrey 10%);
}

table#timelineTable tr.timeline-step > td.timeline-cell > a {
    color: black;
    padding-left: 2px;
    padding-right: 2px;
    display: inline;
    cursor: pointer;
}
table#timelineTable tr.timeline-step > td.timeline-cell > a:hover {
    color: #cccccc;
}

table#timelineTable tr.timeline-step > td.timeline-cell-occupied div.occupied-resize-handle {
    width: 100%;
    height: 3px;
    position: absolute;
    bottom: 0px;
    display: block;
    cursor: s-resize;
}
table#timelineTable tr.timeline-step > td.timeline-cell-occupied div.occupied-resize-handle:hover {
     border-bottom: double;
}


div.tooltip div.tooltip-inner{
    text-align: left;
}

